Fix for discover tool not showing in frame.

--- a/client/src/app/tool/tool.component.scss
+++ b/client/src/app/tool/tool.component.scss
@@ -1,9 +1,12 @@
 #container {
-    position: absolute;
     width: 100%;
     height: 100%;
+
+    min-height: 1000px;
+    
     iframe {
-    width: 100%;
-    height: 100%;
+        width: 100%;
+        height: 100%;
+        min-height: 1000px;
     }
 }
